--- a/activemq/pom.xml
+++ b/activemq/pom.xml
@@ -13,15 +13,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
-		<message.version>0.0.1</message.version>
+		<message.core.version>0.0.1</message.core.version>
 		<activemq.version>5.7.0</activemq.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.hua</groupId>
-			<artifactId>message</artifactId>
-			<version>${message.version}</version>
+			<artifactId>message-core</artifactId>
+			<version>${message.core.version}</version>
 		</dependency>
 
 	<dependency>
