--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<module>activemq5</module>		
 		<module>kafka-core</module>
 		<module>kafka-spring</module>
-		<module>message</module>		
+		<module>message-core</module>		
 		<module>rabbitmq</module>		
 		<module>rabbitmq-spring</module>		
 		
